<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.noa.laboratorio_51_1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:weightSum="4">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/color1"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#ff0000"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/color2"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#2bff00"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/color3"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#001aff"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/color4"
            android:id="@+id/textVie4"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#f7ff00"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.32"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtRow1"
                android:id="@+id/txtRow1"
                android:layout_weight="0.25" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtRow2"
                android:id="@+id/txtRow2"
                android:layout_weight="0.25" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtRow3"
                android:id="@+id/txtRow3"
                android:layout_weight="0.25" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtRow4"
                android:id="@+id/txtRow4"
                android:layout_weight="0.25" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
